unpackaged/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <label>Incident Report / General Feedback</label>
    <nameField>
        <displayFormat>F {00000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Reports / General Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>