unpackaged/main/default/objects/Customer_Feedback__c/fields/Adverse_consequences_to_patient_user__c.field-meta.xml
<CustomField>
    <fullName>Adverse_consequences_to_patient_user__c</fullName>
    <inlineHelpText>Please describe any adverse consequences to patient / user. Please include specific patient symptoms associated with the reported incident.</inlineHelpText>
    <label>Adverse consequences to patient / user</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>