unpackaged/main/default/objects/Customer_Feedback__c/fields/Build_Large__c.field-meta.xml
<CustomField>
    <fullName>Build_Large__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build: Large</label>
    <type>Checkbox</type>
</CustomField>