unpackaged/main/default/objects/Customer_Feedback__c/fields/Build_Medium__c.field-meta.xml
<CustomField>
    <fullName>Build_Medium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build: Medium</label>
    <type>Checkbox</type>
</CustomField>