unpackaged/main/default/objects/Customer_Feedback__c/fields/Build_Small__c.field-meta.xml
<CustomField>
    <fullName>Build_Small__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Build: Small</label>
    <type>Checkbox</type>
</CustomField>