unpackaged/main/default/objects/Customer_Feedback__c/fields/Clinical__c.field-meta.xml
<CustomField>
    <fullName>Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinical</label>
    <type>Checkbox</type>
</CustomField>