unpackaged/main/default/objects/Customer_Feedback__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person reporting the incident to us. It may not be the surgeon who carried out the procedure.</inlineHelpText>
    <label>Person Reporting the Incident / Feedback</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Reports / General Feedback (Contact)</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>