unpackaged/main/default/objects/Customer_Feedback__c/fields/Description_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Event__c</fullName>
    <label>Description of Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>