unpackaged/main/default/objects/Customer_Feedback__c/fields/Detail_on_Medical_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Detail_on_Medical_Intervention__c</fullName>
    <inlineHelpText>Was any medical intervention required?
If so, what was the result of the intervention?</inlineHelpText>
    <label>Detail on Medical Intervention</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>