unpackaged/main/default/objects/Customer_Feedback__c/fields/Details_of_additional_anaesthesia__c.field-meta.xml
<CustomField>
    <fullName>Details_of_additional_anaesthesia__c</fullName>
    <label>Details of additional anaesthesia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>