unpackaged/main/default/objects/Customer_Feedback__c/fields/Device_Lot__c.field-meta.xml
<CustomField>
    <fullName>Device_Lot__c</fullName>
    <label>Device Lot #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>