unpackaged/main/default/objects/Customer_Feedback__c/fields/Device_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Device Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Incident Reports / General Feedback</relationshipLabel>
    <relationshipName>Adverse_Incidents_Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>