unpackaged/main/default/objects/Customer_Feedback__c/fields/Device_Size__c.field-meta.xml
<CustomField>
    <fullName>Device_Size__c</fullName>
    <label>Device Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>