unpackaged/main/default/objects/Customer_Feedback__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incident Reports / General Feedback (Distributor)</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>