unpackaged/main/default/objects/Customer_Feedback__c/fields/Evaluation_Sources__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Sources__c</fullName>
    <label>Evaluation Sources</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>