unpackaged/main/default/objects/Customer_Feedback__c/fields/Feedback_ref__c.field-meta.xml
<CustomField>
    <fullName>Feedback_ref__c</fullName>
    <label>Feedback ref. #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>