unpackaged/main/default/objects/Customer_Feedback__c/fields/Further_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Further_Action_Taken__c</fullName>
    <label>Further Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>