unpackaged/main/default/objects/Customer_Feedback__c/fields/Graft_detail__c.field-meta.xml
<CustomField>
    <fullName>Graft_detail__c</fullName>
    <inlineHelpText>Graft detail (diameter/BPTB/HSSTG)
if applicable</inlineHelpText>
    <label>Graft detail</label>
    <type>TextArea</type>
</CustomField>