unpackaged/main/default/objects/Customer_Feedback__c/fields/Hospital_Facility__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incident Reports / General Feedback (Hospital)</relationshipLabel>
    <relationshipName>Customer_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>