unpackaged/main/default/objects/Customer_Feedback__c/fields/Indication__c.field-meta.xml
<CustomField>
    <fullName>Indication__c</fullName>
    <label>Indication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>