unpackaged/main/default/objects/Customer_Feedback__c/fields/Is_the_device_available_for_return__c.field-meta.xml
<CustomField>
    <fullName>Is_the_device_available_for_return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Available for Return</label>
    <type>Checkbox</type>
</CustomField>