unpackaged/main/default/objects/Customer_Feedback__c/fields/Minutes_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Delayed__c</fullName>
    <inlineHelpText>f applicable, delay in surgery (mins)</inlineHelpText>
    <label>Minutes Delayed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>