unpackaged/main/default/objects/Customer_Feedback__c/fields/Non_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Non_Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Clinical</label>
    <type>Checkbox</type>
</CustomField>