unpackaged/main/default/objects/Customer_Feedback__c/fields/Other_Devices_Substances_Used__c.field-meta.xml
<CustomField>
    <fullName>Other_Devices_Substances_Used__c</fullName>
    <label>Other Devices / Substances Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>