unpackaged/main/default/objects/Customer_Feedback__c/fields/Other_observations_made__c.field-meta.xml
<CustomField>
    <fullName>Other_observations_made__c</fullName>
    <inlineHelpText>Other observations made
eg. was excessive force used
was driver tip deformed prior to operation was screw fully seated on driver prior to insertion</inlineHelpText>
    <label>Other observations made</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>