unpackaged/main/default/objects/Customer_Feedback__c/fields/Patient_Pathology__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pathology__c</fullName>
    <label>Patient Pathology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>