unpackaged/main/default/objects/Customer_Feedback__c/fields/Patient_Ref__c.field-meta.xml
<CustomField>
    <fullName>Patient_Ref__c</fullName>
    <label>Patient Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>