unpackaged/main/default/objects/Customer_Feedback__c/fields/Patient_specifics__c.field-meta.xml
<CustomField>
    <fullName>Patient_specifics__c</fullName>
    <inlineHelpText>Patient specifics (sedentary/athletic/age)</inlineHelpText>
    <label>Patient specifics</label>
    <type>TextArea</type>
</CustomField>