unpackaged/main/default/objects/Customer_Feedback__c/fields/Product_failure_mode_incident_details__c.field-meta.xml
<CustomField>
    <fullName>Product_failure_mode_incident_details__c</fullName>
    <label>Product failure mode / incident details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>