unpackaged/main/default/objects/Customer_Feedback__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Experience - Proceed with Part B</fullName>
            </value>
            <value>
                <fullName>Adverse Incident/ Quality Problem/ Complaint - Proceed with Part C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>