unpackaged/main/default/objects/Customer_Feedback__c/fields/Reporting_Person_Department__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Person_Department__c</fullName>
    <formula>text( Contact_Name__r.Account_type__c )</formula>
    <label>Reporting Person: Department</label>
    <type>Text</type>
</CustomField>