unpackaged/main/default/objects/Customer_Feedback__c/fields/Reporting_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Person_Email__c</fullName>
    <formula>Contact_Name__r.Email</formula>
    <label>Reporting Person: Email</label>
    <type>Text</type>
</CustomField>