unpackaged/main/default/objects/Customer_Feedback__c/fields/Reporting_Person_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Person_Job_Title__c</fullName>
    <formula>text( Contact_Name__r.Job_Role__c )</formula>
    <label>Reporting Person: Job Title</label>
    <type>Text</type>
</CustomField>