unpackaged/main/default/objects/Customer_Feedback__c/fields/Reporting_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Person_Phone__c</fullName>
    <formula>Contact_Name__r.Phone</formula>
    <label>Reporting Person: Phone</label>
    <type>Text</type>
</CustomField>