unpackaged/main/default/objects/Customer_Feedback__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sex: Male</label>
    <type>Checkbox</type>
</CustomField>