unpackaged/main/default/objects/Customer_Feedback__c/fields/Sex_Female__c.field-meta.xml
<CustomField>
    <fullName>Sex_Female__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sex: Female</label>
    <type>Checkbox</type>
</CustomField>