unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the surgeon who used our product on the patient.</inlineHelpText>
    <label>Surgeon</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Reports / General Feedback (Surgeon)</relationshipLabel>
    <relationshipName>Customer_Feedbacks1</relationshipName>
    <type>Lookup</type>
</CustomField>