unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgeon_Experience_with_product__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Experience_with_product__c</fullName>
    <label>Surgeon Experience with Product</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>