unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgeon_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Job_Title__c</fullName>
    <formula>text(Surgeon__r.Job_Role__c )</formula>
    <label>Surgeon: Job Title</label>
    <type>Text</type>
</CustomField>