unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgeon_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Speciality__c</fullName>
    <formula>Text(Surgeon__r.Specialty__c)</formula>
    <label>Surgeon: Speciality</label>
    <type>Text</type>
</CustomField>