unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgeon_SubSpeciality__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_SubSpeciality__c</fullName>
    <formula>text( Surgeon__r.Speciality_Sub__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surgeon: Sub Speciality</label>
    <type>Text</type>
</CustomField>