unpackaged/main/default/objects/Customer_Feedback__c/fields/Surgery_Completed_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Completed_Successfully__c</fullName>
    <inlineHelpText>Was surgery completed successfully using the initial device, an equivalent device used or an alternative device?</inlineHelpText>
    <label>Surgery Completed Successfully?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>