unpackaged/main/default/objects/Customer_Feedback__c/fields/Technical_Support__c.field-meta.xml
<CustomField>
    <fullName>Technical_Support__c</fullName>
    <label>Technical Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Web based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>