unpackaged/main/default/objects/Customer_Feedback__c/fields/Technique__c.field-meta.xml
<CustomField>
    <fullName>Technique__c</fullName>
    <inlineHelpText>Technique (trans-tibial or antero-medial portal approach)
if applicable</inlineHelpText>
    <label>Technique</label>
    <type>TextArea</type>
</CustomField>