unpackaged/main/default/objects/Customer_Feedback__c/fields/Times_Driver_used__c.field-meta.xml
<CustomField>
    <fullName>Times_Driver_used__c</fullName>
    <inlineHelpText>How many times was the driver used before this case?</inlineHelpText>
    <label>Times Driver used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>