unpackaged/main/default/objects/Customer_Feedback__c/fields/Tunnel_Detail__c.field-meta.xml
<CustomField>
    <fullName>Tunnel_Detail__c</fullName>
    <inlineHelpText>Tunnel Detail (diameter/length/ femoral/tibial)
if applicable</inlineHelpText>
    <label>Tunnel Detail</label>
    <type>TextArea</type>
</CustomField>