unpackaged/main/default/objects/Customer_Feedback__c/fields/X2_Product_use__c.field-meta.xml
<CustomField>
    <fullName>X2_Product_use__c</fullName>
    <label>Product use Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>