unpackaged/main/default/objects/Customer_Feedback__c/recordTypes/General_Feedback.recordType-meta.xml
<RecordType>
    <fullName>General_Feedback</fullName>
    <active>true</active>
    <description>Any positive or negative feedback about the company and our products that isn’t covered by the incident report, such as future product development.</description>
    <label>General Feedback</label>
</RecordType>