unpackaged/main/default/objects/Customer_Feedback__c/recordTypes/Incident_Report.recordType-meta.xml
<RecordType>
    <fullName>Incident_Report</fullName>
    <active>true</active>
    <description>The incident report should be used to report any dissatisfaction relating to the identity, quality, durability, reliability, safety or performance of a device after release for use from the manufacturing facility.</description>
    <label>Incident Report</label>
</RecordType>